<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:fillViewport="true"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:paddingRight="40dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_profile"
            android:padding="10dp"
            android:id="@+id/ivProfile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Note: Required \n Choose Image"
            android:gravity="center"
            android:id="@+id/tvUpload"
            android:layout_marginBottom="20dp"
            />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/etRegEmail"
            android:hint="@string/hint_email"
            android:maxLength="26"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_firstname"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/OutlinedBox">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_firstname"
        android:inputType="textNoSuggestions"
        android:id="@+id/etRegFirstname"
        android:maxLength="25"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_lastname"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/OutlinedBox">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lastname"
        android:inputType="textNoSuggestions"
        android:id="@+id/etRegLastname"
        android:maxLength="25"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/OutlinedBox"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark"
        >
    <EditText
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:password="true"
        android:inputType="textFilter"
        android:id="@+id/etRegPassword"
        android:maxLength="15"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_repassword"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        style="@style/OutlinedBox"
        app:passwordToggleTint="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
        <EditText
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_repassword"
            android:password="true"
            android:inputType="textFilter"
            android:id="@+id/etRegRePassword"
            android:maxLength="15"
            />
    </com.google.android.material.textfield.TextInputLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="2">

        <RadioGroup
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:id="@+id/rgSub"
          >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb7Days"
                android:checked="true">
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb15Days">
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:id="@+id/rb30Days">
            </RadioButton>

        </RadioGroup>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <CheckBox
                   android:id="@+id/chbIagree"
                   android:layout_width="wrap_content"
                   android:layout_marginTop="72dp"
                   android:layout_height="wrap_content"
                   />

               <TextView
                   android:focusableInTouchMode="true"
                   android:focusable="true"
                   android:layout_width="wrap_content"
                   android:layout_marginTop="64dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/tvTerms"
                   android:textSize="12sp"
                   android:text="I agree to terms \n and conditions"/>


           </LinearLayout>

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Register"
                />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancel"
                />
        </LinearLayout>


    </LinearLayout>

</ScrollView>